# trust-model-agent-eval

./: .env.example  .gitignore  BACKEND_API_DOCUMENTATION.md  DOCUMENTATION.md  MCP_TRACING_SERVER_PLAN.md  Makefile  README.md  SYSTEM_OVERVIEW.md  TRACING_IMPLEMENTATION_PLAN.md  docker-compose.yml  pyproject.toml  test_langsmith_eval.py
examples/: agent_collaboration.py  certificate_verification.py  instrument_agent.py  quickstart.py  run_evaluation.py
mcp-tracing-server/: README.md  pyproject.toml  test_local.py
mcp-tracing-server/src/trustmodel_mcp/: __init__.py  models.py  server.py
mcp-tracing-server/src/trustmodel_mcp/extractors/: __init__.py  anthropic.py  base.py  openai.py  registry.py
mcp-tracing-server/src/trustmodel_mcp/resources/: __init__.py
mcp-tracing-server/src/trustmodel_mcp/storage/: __init__.py  base.py  sqlite.py
mcp-tracing-server/src/trustmodel_mcp/tools/: __init__.py  trace_tools.py
playground/: package-lock.json  package.json  tailwind.config.ts
playground/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
playground/src/app/agents/: page.tsx
playground/src/app/agents/[id]/: page.tsx  trace-detail.tsx
playground/src/app/api/certificates/: route.ts
playground/src/app/api/certificates/[id]/revoke/: route.ts
playground/src/app/api/chat-agent/: route.ts
playground/src/app/api/fetch-traces/: route.ts
playground/src/app/api/proxy/anthropic/[...path]/: route.ts
playground/src/app/api/test-agent/: route.ts
playground/src/app/certificates/: page.tsx
playground/src/app/certificates/[id]/: page.tsx
playground/src/app/evaluations/: page.tsx
playground/src/app/evaluations/[id]/: page.tsx
playground/src/app/login/: page.tsx
playground/src/app/new/: page.tsx
playground/src/app/observability/: page.tsx
playground/src/app/playground/: page.tsx
playground/src/app/settings/: page.tsx
playground/src/app/terminal/: page.tsx
playground/src/app/traces/: page.tsx
playground/src/components/dashboard/: RecentAgents.tsx  RecentEvaluations.tsx  StatsCards.tsx  TrustScoreChart.tsx
playground/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx  SimpleLayout.tsx
playground/src/components/ui/: GradeBadge.tsx  StatusBadge.tsx
scripts/: test-trace-stream.sh  tm-trace
sdk/: README.md  pyproject.toml
sdk/src/trustmodel/: __init__.py  version.py
sdk/src/trustmodel/api/: __init__.py  client.py
sdk/src/trustmodel/certify/: __init__.py  certificates.py
sdk/src/trustmodel/cli/: __init__.py  main.py
sdk/src/trustmodel/cli/commands/: agent.py  cert.py  evaluate.py  proxy.py
sdk/src/trustmodel/connect/: __init__.py  agent.py  exporters.py  instrument.py  tracer.py
sdk/src/trustmodel/connect/auto/: __init__.py  anthropic.py  langchain.py  openai.py
sdk/src/trustmodel/core/: __init__.py  config.py  exceptions.py  logging.py
sdk/src/trustmodel/evaluate/: __init__.py  client.py
sdk/src/trustmodel/models/: __init__.py  agent.py  certificate.py  evaluation.py  protocol.py  trace.py
sdk/src/trustmodel/protocol/: __init__.py  client.py  session.py  signing.py
server/: Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2294a9798a47_add_session_messages_table.py  7546b95f09b9_initial_schema.py
server/app/: __init__.py  config.py  main.py
server/app/api/: __init__.py  auth.py  deps.py
server/app/api/v1/: agents.py  certificates.py  chat.py  evaluations.py  registry.py  router.py  sessions.py  stats.py  terminal.py  trace_ingest.py  trace_stream.py  traces.py
server/app/ca/: __init__.py  authority.py  issuer.py  revocation.py  verifier.py
server/app/core/: __init__.py  database.py  logging.py  redis.py  security.py
server/app/evaluation/: __init__.py  agent_executor.py  engine.py  executor.py  metrics.py  scoring.py
server/app/evaluation/graders/: __init__.py  base.py  openrouter_client.py  reasoning_grader.py  safety_grader.py
server/app/evaluation/suites/: __init__.py  base.py  capability.py  communication.py  reliability.py  safety.py
server/app/evaluation/tasks/: __init__.py  loader.py
server/app/evaluation/tasks/capability/: reasoning.yaml  task_completion.yaml
server/app/evaluation/tasks/communication/: protocol.yaml
server/app/evaluation/tasks/reliability/: consistency.yaml
server/app/evaluation/tasks/safety/: boundaries.yaml  jailbreaks.yaml
server/app/models/: __init__.py  agent.py  base.py  certificate.py  evaluation.py  session.py  trace.py  user.py
server/app/proxy/: __init__.py
server/app/proxy/extractors/: __init__.py  anthropic.py  base.py  openai.py
server/app/schemas/: __init__.py  agent.py  auth.py  certificate.py  evaluation.py  session.py  trace.py  trace_ingest.py
server/app/services/: __init__.py  agent_keys.py  agent_service.py  certificate_service.py  evaluation_service.py  protocol_handler.py  session_service.py  trace_service.py
server/app/workers/: __init__.py  celery_app.py  evaluation_tasks.py  trace_tasks.py
