[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustmodel-mcp"
version = "0.1.0"
description = "MCP server for universal LLM tracing - captures traces from Claude, OpenAI, and any provider"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TrustModel", email = "hello@trustmodel.dev" }
]
keywords = ["mcp", "tracing", "llm", "claude", "openai", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
trustmodel-mcp = "trustmodel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trustmodel_mcp"]
